@@ -1,1 +1,1 @@
-version=1.7-beta
+version=1.7
