@@ -4,7 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * 
+ * 分词抽象类.
  * 
  * @author chenlb 2009-3-16 下午09:15:30
  */
@@ -47,50 +47,6 @@ public abstract class Seg {
 	}
 	
 	/**
-	 * 
-	 * @deprecated
-	 */
-	protected int search(char[] chs, int offset, int tailLen, char[][] cks, int ckIdx) {
-		if(tailLen == 0) {
-			return -1;
-		}
-		CharNode cn = dic.head(chs[offset]);
-		return search(cn, chs, offset, tailLen, cks, ckIdx);
-	}
-	/**
-	 * 从 cn 结果下找chs[offset]后面tailLenlen个字符.
-	 * @param cks 复制到 cks[ckIdx] 中, 它可能是一个词, 生成 Chunk 时就不用在 System.arraycopy 了
-	 * @return 返回chs[offset]字符结点下的词尾索引号,没找到返回 -1.
-	 * @deprecated 用 {@link #search(CharNode, char[], int, int)} 可以减少数组复制.
-	 * @author chenlb 2009-3-29 下午01:31:16
-	 */
-	protected int search(CharNode cn, char[] chs, int offset, int tailLen, char[][] cks, int ckIdx) {
-		if(tailLen == 0) {
-			if(offset < chs.length) {
-				cks[ckIdx] = new char[1];
-				cks[ckIdx][0] = chs[offset];
-			} else {
-				cks[ckIdx] = null;
-			}
-			return -1;
-		}
-		
-		if(cn == null) {
-			if(offset < chs.length) {
-				cks[ckIdx] = new char[1];
-				cks[ckIdx][0] = chs[offset];
-			} else {
-				cks[ckIdx] = null;
-			}
-			return -1;
-		}
-		char[] subChs = new char[tailLen+1];
-		System.arraycopy(chs, offset, subChs, 0, tailLen+1);
-		cks[ckIdx] = subChs;
-		return dic.search(cn, subChs);
-	}
-	
-	/**
 	 * 没有数组的复制.
 	 * @author chenlb 2009-4-8 下午11:39:15
 	 */
@@ -100,75 +56,12 @@ public abstract class Seg {
 		}
 		return dic.search(cn, chs, offset, tailLen);
 	}
-	/**
-	 * 结合与词库长度给出可用的词的最大长度
-	 * @param chs 待分词的句子
-	 * @param offset 词在 chs 的开始位置
-	 * @deprecated 使用 {@link #getLens(char[], int, int[], int)}
-	 */
-	protected int maxLen(char[] chs, int offset) {
-		if(offset >= chs.length) {
-			return 0;
-		}
-		CharNode cn = dic.head(chs[offset]);
-		if(cn == null) {
-			return 0;
-		}
-		return Math.min(cn.getMaxLen(), chs.length-offset-1);
-	}
 	
 	/**
-	 * 取得所有chs[offset]字符开始的不同词长<br/>
-	 * 同时计算出可行的最大长度, 保存在maxAvailableLen[maxLenIdx].
-	 * @param chs 待分词的句子
-	 * @param offset 词在 chs 的开始位置
-	 * @param maxAvailableLen 结合与词库长度给出可用的词的最大长度的保存空间
-	 * @param maxLenIdx maxAvailableLen 的索引号
-	 * @return 至少一个 {0}
-	 * @deprecated 使用 {@link #getLens(CharNode[], int, char[], int, int[], int)}
+	 * 最大匹配<br/>
+	 * 从 chs[offset] 开始匹配, 同时把 chs[offset] 的字符结点保存在 cns[cnIdx]
+	 * @return 最大匹配到的词尾长, > 0 找到
 	 */
-	protected int[] getLens(char[] chs, int offset, int[] maxAvailableLen, int maxLenIdx) {
-		if(offset >= chs.length) {
-			maxAvailableLen[maxLenIdx] = 0;
-			return new int[] {0};
-		}
-		CharNode cn = dic.head(chs[offset]);
-		if(cn == null) {
-			maxAvailableLen[maxLenIdx] = 0;
-			return new int[] {0};
-		}
-		maxAvailableLen[maxLenIdx] = Math.min(cn.getMaxLen(), chs.length-offset-1);
-		return cn.getLens();
-	}
-	
-	/**
-	 * 取得所有chs[offset]字符开始的不同词长, 并把chs[offest]的字符结点保存在cns[cnIdx]中<br/>
-	 * 同时计算出可行的最大长度, 保存在maxAvailableLen[maxLenIdx].
-	 * @param chs 待分词的句子
-	 * @param offset 词在 chs 的开始位置
-	 * @param maxAvailableLen 结合与词库长度给出可用的词的最大长度的保存空间
-	 * @param maxLenIdx maxAvailableLen 的索引号
-	 * @return 至少一个 {0}
-	 * @deprecated 用 {@link CharNode#maxMatch(java.util.ArrayList, char[], int)}
-	 * @author chenlb 2009-3-29 下午01:33:01
-	 */
-	protected int[] getLens(CharNode[] cns, int cnIdx, char[] chs, int offset, int[] maxAvailableLen, int maxLenIdx) {
-		if(offset >= chs.length) {
-			maxAvailableLen[maxLenIdx] = 0;
-			cns[cnIdx] = null;
-			return new int[] {0};
-		}
-		CharNode cn = dic.head(chs[offset]);
-		if(cn == null) {
-			maxAvailableLen[maxLenIdx] = 0;
-			cns[cnIdx] = null;
-			return new int[] {0};
-		}
-		maxAvailableLen[maxLenIdx] = Math.min(cn.getMaxLen(), chs.length-offset-1);
-		cns[cnIdx] = cn;
-		return cn.getLens();
-	}
-	
 	protected int maxMatch(CharNode[] cns, int cnIdx, char[] chs, int offset) {
 		CharNode cn = null;
 		if(offset < chs.length) {
@@ -179,13 +72,9 @@ public abstract class Seg {
 	}
 	
 	/**
-	 * 匹配,同时找出长度
-	 * @param cns
-	 * @param cnIdx
-	 * @param chs
-	 * @param offset
-	 * @param tailLens
-	 * @param tailLensIdx
+	 * 匹配,同时找出长度. <br/>
+	 * 从 chs[offset] 开始找所有匹配的词, 找到的放到 tailLens[tailLensIdx] 中. <br/>
+	 * 同时把 chs[offset] 的字符结点保存在 cns[cnIdx].
 	 * @author chenlb 2009-4-12 上午10:37:58
 	 */
 	protected void maxMatch(CharNode[] cns, int cnIdx, char[] chs, int offset, ArrayList<Integer>[] tailLens, int tailLensIdx) {
@@ -197,5 +86,9 @@ public abstract class Seg {
 		dic.maxMatch(cn, tailLens[tailLensIdx], chs, offset);
 	}
 	
+	/**
+	 * 对句子 sen 进行分词.
+	 * @return 不返回 null.
+	 */
 	public abstract Chunk seg(Sentence sen);
 }
